// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button context-menu-item: 0 1`] = `
<li
  aria-checked={null}
  className="context-menu-item"
  role="menuitem"
>
  child
</li>
`;

exports[`button context-menu-item: 1 1`] = `
<li
  aria-checked={null}
  className="context-menu-item"
  role="menuitem"
>
  child
</li>
`;

exports[`button context-menu-item: 2 1`] = `
<li
  aria-checked={null}
  className="context-menu-item"
  role="menuitem"
>
  menuitem
</li>
`;

exports[`button context-menu-item: 3 1`] = `
<li
  aria-checked={false}
  className="context-menu-item"
  role="menuitemradio"
>
  menuitemradio
</li>
`;

exports[`button context-menu-item: 4 1`] = `
<li
  aria-checked={false}
  className="context-menu-item"
  role="menuitemcheckbox"
>
  menuitemcheckbox
</li>
`;

exports[`button context-menu-item: 5 1`] = `
<li
  aria-checked={null}
  className="context-menu-item"
  role="separator"
/>
`;

exports[`button context-menu-item: 6 1`] = `
<li
  aria-checked={null}
  checked={true}
  className="context-menu-item"
  role="menuitem"
>
  menuitem checked
</li>
`;

exports[`button context-menu-item: 7 1`] = `
<li
  aria-checked={true}
  checked={true}
  className="context-menu-item"
  role="menuitemradio"
>
  menuitemradio checked
</li>
`;

exports[`button context-menu-item: 8 1`] = `
<li
  aria-checked={true}
  checked={true}
  className="context-menu-item"
  role="menuitemcheckbox"
>
  menuitemcheckbox checked
</li>
`;

exports[`button context-menu-item: 9 1`] = `
<li
  aria-checked={null}
  checked={true}
  className="context-menu-item"
  role="separator"
/>
`;
